feat(signer): add sign endpoint

--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,4 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=e874fab11bc44b25223ffad99a144d63
 ###< symfony/framework-bundle ###
+SIGNATURE_SECRET=xNWii7GbwY5IP2cWkrPb
