--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,6 +21,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\Cryptography\Services\Signer:
+    App\Cryptography\Services\SignatureHmacStrategy:
         arguments:
             $signatureSecret: '%env(string:SIGNATURE_SECRET)%'
